--- a/app/heroes.component.html
+++ b/app/heroes.component.html
@@ -1,20 +1,10 @@
-<h2>My Heroes</h2>
+<h1>Tour of Heroes ({{mode}})</h1>
 
-<div>
-    <label>Hero name:</label> <input #heroName />
-    <button (click)="add(heroName.value); heroName.value=''">Add</button>
-</div>
-
-<ul class="heroes">
-    <li *ngFor="let hero of heroes"
-        [class.selected]="hero === selectedHero"
-        (click)="onSelect(hero)">
-        <span class="badge">{{hero.id}}</span> {{hero.name}}
-        <button class="delete" (click)="delete(hero); $event.stopPropagation()">&times;</button>
-    </li>
+<h3>Heroes:</h3>
+<ul>
+    <li *ngFor="let hero of heroes">{{hero.name}}</li>
 </ul>
+New hero name: <input #newHeroName />
+<button (click)="addHero(newHeroName.value); newHeroName.value=''">Add Hero</button>
 
-<div *ngIf="selectedHero">
-    <h2>{{selectedHero.name | uppercase}} is my hero</h2>
-    <button (click)="gotoDetail()">View Details</button>
-</div>
+<div class="error" *ngIf="errorMessage">{{errorMessage}}</div>
