Fetch weather for the city

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,5 +2,6 @@
 <nav>
     <a routerLink="/heroes" routerLinkActive="active">Heroes</a>
     <a routerLink="/wiki" routerLinkActive="active">Wiki</a>
+    <a routerLink="/weather" routerLinkActive="active">Weather</a>
 </nav>
 <router-outlet></router-outlet>
