--- a/app/app.component.css
+++ b/app/app.component.css
@@ -1,28 +1,15 @@
-h1 {
-    font-size: 1.2em;
-    color: #999;
-    margin-bottom: 0;
+.weather-icon {
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
 }
-h2 {
-    font-size: 2em;
-    margin-top: 0;
-    padding-top: 0;
+.weather-wind {
+    position: relative;
+    padding-right: 1.5em;
 }
-nav a {
-    padding: 5px 10px;
-    text-decoration: none;
-    margin-top: 10px;
-    display: inline-block;
-    background-color: #eee;
-    border-radius: 4px;
-}
-nav a:visited, a:link {
-    color: #607D8B;
-}
-nav a:hover {
-    color: #039be5;
-    background-color: #CFD8DC;
-}
-nav a.active {
-    color: #039be5;
+.weather-wind-arrow {
+    position: absolute;
+    top: 0;
+    right: 0.7em;
+    font-weight: 700;
 }
