--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,7 +1,34 @@
-<h1>{{title}}</h1>
-<nav>
-    <a routerLink="/heroes" routerLinkActive="active">Heroes</a>
-    <a routerLink="/wiki" routerLinkActive="active">Wiki</a>
-    <a routerLink="/weather" routerLinkActive="active">Weather</a>
-</nav>
-<router-outlet></router-outlet>
+<h1>Weather App</h1>
+<h3>Cities:</h3>
+<form (submit)="$event.preventDefault(); addCity(newCity.value); newCity.value=''">
+    <input #newCity />
+    <button type="submit">Add City</button>
+</form>
+<ul>
+    <li *ngFor="let city of cities">
+        <strong>{{city.name}}</strong>
+
+        <span *ngIf="city.weather" class="weather">
+            <span class="city-name">
+                ({{ city.weather.name }}, {{ city.weather.sys.country }})
+            </span>
+
+            <span class="weather-temp"> {{ city.weather.main.temp | number:'1.0-0' }}&deg;C</span>
+            <span class="weather-description">{{ city.weather.weather[0].description }}</span>
+            <img class="weather-icon"
+                 src="http://openweathermap.org/img/w/{{ city.weather.weather[0].icon }}.png"
+                 alt="{{ city.weather.weather[0].description }}" />
+
+            <span class="weather-wind">wind {{ city.weather.wind.speed }}m/s
+                <span class="weather-wind-arrow"
+                      [ngStyle]="{'transform': 'rotate(' + city.weather.wind.deg + 'deg)'}">&uarr;</span>
+            </span>
+        </span>
+
+        <span *ngIf="city.errorMessage">Error while retrieving data from server</span>
+        <button (click)="removeCity(city.name); $event.stopPropagation();">&times;</button>
+    </li>
+</ul>
+<div *ngIf="isSearchable()">
+    <button (click)="searchWeather()">Search weather</button>
+</div>
